# SciVis-Final

./: .gitignore  CMakeLists.txt  READMELinux.txt  READMEWindows.txt  Readme.docx  SciVis.sln
SciVis/: GLWidget.cpp  GLWidget.h  Makefile  MarchingSquare.cpp  MarchingSquare.h  Polyline.cpp  Polyline.h  Project.cpp  Project.h  SciVis.cpp  SciVis.h  SciVis.qrc  SciVis.ui  SciVis.vcxproj  SciVis.vcxproj.filters  glError.h  icVector.H  main.cpp  ply.cpp  ply.h  ply_io.h  polyhedron.cpp  polyhedron.h  scivis.x  tmatrix.cpp  trackball.cpp  ui_SciVis.h
